sit-core/src/duktape/bindings.rs

extern "C" {
    pub fn duk_get_current_magic(ctx: *mut duk_context) -> duk_int_t;
}
extern "C" {
    pub fn duk_put_function_list(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                 funcs: *const duk_function_list_entry);
}
extern "C" {
    pub fn duk_put_number_list(ctx: *mut duk_context, obj_idx: duk_idx_t,
                               numbers: *const duk_number_list_entry);
}
extern "C" {
    pub fn duk_compact(ctx: *mut duk_context, obj_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_enum(ctx: *mut duk_context, obj_idx: duk_idx_t,
                    enum_flags: duk_uint_t);
}
extern "C" {
    pub fn duk_next(ctx: *mut duk_context, enum_idx: duk_idx_t,
                    get_value: duk_bool_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_seal(ctx: *mut duk_context, obj_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_freeze(ctx: *mut duk_context, obj_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_concat(ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_join(ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_decode_string(ctx: *mut duk_context, idx: duk_idx_t,
                             callback: duk_decode_char_function,
                             udata: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_map_string(ctx: *mut duk_context, idx: duk_idx_t,
                          callback: duk_map_char_function,
                          udata: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_substring(ctx: *mut duk_context, idx: duk_idx_t,
                         start_char_offset: duk_size_t,
                         end_char_offset: duk_size_t);
}
extern "C" {
    pub fn duk_trim(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_char_code_at(ctx: *mut duk_context, idx: duk_idx_t,
                            char_offset: duk_size_t) -> duk_codepoint_t;
}
extern "C" {
    pub fn duk_equals(ctx: *mut duk_context, idx1: duk_idx_t, idx2: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_strict_equals(ctx: *mut duk_context, idx1: duk_idx_t,
                             idx2: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_samevalue(ctx: *mut duk_context, idx1: duk_idx_t,
                         idx2: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_instanceof(ctx: *mut duk_context, idx1: duk_idx_t,
                          idx2: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_call(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_call_method(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_call_prop(ctx: *mut duk_context, obj_idx: duk_idx_t,
                         nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_pcall(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_pcall_method(ctx: *mut duk_context, nargs: duk_idx_t)
     -> duk_int_t;
}
extern "C" {
    pub fn duk_pcall_prop(ctx: *mut duk_context, obj_idx: duk_idx_t,
                          nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_new(ctx: *mut duk_context, nargs: duk_idx_t);
}
extern "C" {
    pub fn duk_pnew(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_safe_call(ctx: *mut duk_context, func: duk_safe_call_function,
                         udata: *mut ::std::os::raw::c_void, nargs: duk_idx_t,
                         nrets: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_eval_raw(ctx: *mut duk_context,
                        src_buffer: *const ::std::os::raw::c_char,
                        src_length: duk_size_t, flags: duk_uint_t)
     -> duk_int_t;
}
extern "C" {
    pub fn duk_compile_raw(ctx: *mut duk_context,
                           src_buffer: *const ::std::os::raw::c_char,
                           src_length: duk_size_t, flags: duk_uint_t)
     -> duk_int_t;
}
extern "C" {
    pub fn duk_dump_function(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_load_function(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_context_dump(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_attach(ctx: *mut duk_context,
                               read_cb: duk_debug_read_function,
                               write_cb: duk_debug_write_function,
                               peek_cb: duk_debug_peek_function,
                               read_flush_cb: duk_debug_read_flush_function,
                               write_flush_cb: duk_debug_write_flush_function,
                               request_cb: duk_debug_request_function,
                               detached_cb: duk_debug_detached_function,
                               udata: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_debugger_detach(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_cooperate(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_debugger_notify(ctx: *mut duk_context, nvalues: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_debugger_pause(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_get_now(ctx: *mut duk_context) -> duk_double_t;
}
extern "C" {
    pub fn duk_time_to_components(ctx: *mut duk_context,
                                  timeval: duk_double_t,
                                  comp: *mut duk_time_components);
}
extern "C" {
    pub fn duk_components_to_time(ctx: *mut duk_context,
                                  comp: *mut duk_time_components)
     -> duk_double_t;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(::std::mem::size_of::<__va_list_tag>() , 24usize , concat ! (
               "Size of: " , stringify ! ( __va_list_tag ) ));
    assert_eq! (::std::mem::align_of::<__va_list_tag>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( __va_list_tag ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . gp_offset as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( gp_offset ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . fp_offset as * const
                _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( fp_offset ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . overflow_arg_area as
                * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( overflow_arg_area ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const __va_list_tag ) ) . reg_save_area as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( __va_list_tag ) , "::"
                , stringify ! ( reg_save_area ) ));
}
impl Clone for __va_list_tag {
    fn clone(&self) -> Self { *self }
}
